# resonant-cli-oauth-client

./: .git-blame-ignore-revs  README.md  pyproject.toml  setup.py  tox.ini
example/: cli.py  manage.py
example/core/: views.py
example/core/migrations/: 0001_initial.py
example/device_code_oauth_example/: asgi.py  settings.py  urls.py  wsgi.py
girder_cli_oauth_client/: __init__.py  client.py
resonant_cli_oauth_client/: __init__.py  client.py
